grammer.txt
statements : NEWLINE* expr (NEWLINE expr)* NEWLINE

expr : KEYWORD:var IDENTIFIER EQ expr
     : comp-expr ((KEYWORD:and|KWYWORD:or) comp-expr)*
     
comp-expr : KEYWORD not comp-expr
          : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*

arith-expr : term((PLUS|MINUS term)*

term : factor((MUL|DIV) factor)*

factor : (PLUS|MINUS) factor
       : power

power : call (POW factor)*

call : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom : INT|FLOAT|STRING|IDENTIFIER
     : LPAREN expr RPAREN
     : list-expr
     : if-expr
     : for-expr
     : while-expr
     : func-def

list-expr : LSQUARE (expr (COMMA expr)*)? RSQUARE

if-expr : KEYWORD:if expr KEYWORD:then
          (expr if-expr-b|if-expr-c?)
        | (NEWLINE statements KEYWORD:end|if-expr-b|if-expr-c)

if-expr-b : KEYWORD:elif expr KEYWORD:then
          (expr if-expr-b|if-expr-c?)
        | (NEWLINE statements KEYWORD:end|if-expr-b|if-expr-c)

if-expr-c : KEYWORD:else
            expr
          | (NEWLINE statements KEYWORD:end)

for-expr : KEYWORD:for IDENTIFIER EQ expr KEYWORD:to expr
           (KEYWORD:step expr)? KEYWORD:then expr
           expr
         | (NEWLINE statements KEYWORD:end)

while-expr : KEYWORD:while expr KEYWORD:then
             expr
           | (NEWLINE statements KEYWORD:end)

func-def : KEYWORD:func IDENTIFIER?
           LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
           (ARROW expr)
         | (NEWLINE statements KEYWORD:end)
